--- a/calc.html
+++ b/calc.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="calc.css">
 </head>
 <body>
+    <h1>ILOVEMATH.COM</h1>
     <div class="containor">
         <div class="calculator">
             <form>
