--- a/calc.html
+++ b/calc.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="calc.css">
 </head>
 <body>
-    <h1>ILOVEMATH.COM</h1>
     <div class="containor">
+        
         <div class="calculator">
             <form>
+                <legend>calculator</legend>
                 <div class="display">
                     <input type="text" name ="display">
                 </div>
